--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
               coding and fostered my interest in CSS and database management. My education, along with my life experience, will enable 
               me to integrate into the needs of an organization quickly and effectively.
               
-              <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jerdmann(med).jpg" alt="">
+              <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jerdmann(med).jpg" alt=""> -->
               <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p> -->
           </div>
         </div>
+        <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jerdmann(med).jpg" alt=""> -->
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jerdmann(med).jpg" alt="">
         <!-- <img src="img/jerdmann(med).jpg" class="img-fluid" alt=""> -->
         
       </div>
@@ -94,7 +96,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Group Project</h4>
-              <p class="text-black-50 mb-0">Our group will be working on digitizing a game which is used as a development toofor All Wise Moves</p>
+              <p class="text-black-50 mb-0">Our group will be working on digitizing a game which is used as a development tool for All Wise Moves</p>
             </div>
           </div>
         </div>
@@ -207,9 +209,9 @@
           <a href="https://www.linkedin.com/in/juli-erdmann-96624742/" class="mx-2">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="#" class="mx-2">
+          <!-- <a href="#" class="mx-2">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a> -->
         </div>
 
       </div>
